--- a/Cahier-Des-Charges.adoc
+++ b/Cahier-Des-Charges.adoc
@@ -8,7 +8,7 @@ Projet : Dayly Bank
 ##################################################################################
 
 Sommaire :
- 1 - Sujet
+ 1 - Sujet +
  2 - Analyse de la v0 (pré-existante)
  3 - Besoins de l'application
  4 - Contraintes techniques et organisationnelles
