--- a/Cahier-Des-Charges.adoc
+++ b/Cahier-Des-Charges.adoc
@@ -9,9 +9,9 @@ Projet : Dayly Bank
 
 Sommaire :
  1 - Sujet +
- 2 - Analyse de la v0 (pré-existante)
- 3 - Besoins de l'application
- 4 - Contraintes techniques et organisationnelles
+ 2 - Analyse de la v0 (pré-existante) +
+ 3 - Besoins de l'application +
+ 4 - Contraintes techniques et organisationnelles +
   
 1 - Sujet
 
