--- a/Cahier-Des-Charges.adoc
+++ b/Cahier-Des-Charges.adoc
@@ -4,7 +4,7 @@ Cahier des charges +
 Equipe : 1B2 (Berdinel - Soldevilla - Mauriac - Balasch) +
 Version : 1.0 +
 Date : 10/05/2023 +
-Projet : Dayly Bank +
+Projet : Daily Bank +
 ##################################################################################
 
 Sommaire : +
