--- a/README.adoc
+++ b/README.adoc
@@ -18,9 +18,9 @@ link:Gestion%20de%20projet/gantt.pdf[Gantt v1]
 |1      |Chef d’Agence  |CRUD employé  |R                      |   F   |        |       |
 |1      |Chef d’Agence  |CRUD employé  |U                      |       |        |   D   |
 |1      |Chef d’Agence  |CRUD employé  |D                      |       |        |   D   |
-|1      |Guichetier     | Compte | Créer                       |       |   D    |       |
-|1      |Guichetier     | Compte | Créditer/Débiter            |       |        |       |   D
-|1      |Guichetier     | Compte | Effectuer un virement       |       |   D    |       |
+|1      |Guichetier     | Compte | Créer                       |       |   F    |       |
+|1      |Guichetier     | Compte | Créditer/Débiter            |       |   D    |       |   
+|1      |Guichetier     | Compte | Effectuer un virement       |       |        |       |   D
 |1      |Guichetier     | Compte | Clôturer                    |       |        |       |   D
 |2      |Chef d’Agence  | Compte | Débit exceptionnel          |       |        |       |
 |2      |Chef d’Agence  | Emprunt | Simuler emprunt            |       |        |       |
