--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ link:Gestion%20de%20projet/gantt.pdf[Gantt v1]
 |Version|rôle              |use case   |cas...                 | Aidan | Bernat | Hugo  | Jimmy
 |1      |Chef d’Agence  |CRUD employé  |C                      |   F   |        |       |
 |1      |Chef d’Agence  |CRUD employé  |R                      |   F   |        |       |
-|1      |Chef d’Agence  |CRUD employé  |U                      |       |        |   D   |
+|1      |Chef d’Agence  |CRUD employé  |U                      |       |        |   F   |
 |1      |Chef d’Agence  |CRUD employé  |D                      |       |        |   D   |
 |1      |Guichetier     | Compte | Créer                       |       |   D    |       |
 |1      |Guichetier     | Compte | Créditer/Débiter            |       |        |       |   D
