--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ link:Gestion%20de%20projet/Cahier-Des-Charges-V1.adoc[Cahier des charges v1]
 |1      |Chef d’Agence  |CRUD employé  |C                      |   F   |        |       |
 |1      |Chef d’Agence  |CRUD employé  |R                      |   F   |        |       |
 |1      |Chef d’Agence  |CRUD employé  |U                      |       |        |   F   |
-|1      |Chef d’Agence  |CRUD employé  |D                      |       |        |   D   |
+|1      |Chef d’Agence  |CRUD employé  |D                      |       |        |   F   |
 |1      |Guichetier     | Compte | Créer                       |       |   F    |       |
 |1      |Guichetier     | Compte | Créditer/Débiter            |       |   F    |       |   
 |1      |Guichetier     | Compte | Effectuer un virement       |       |        |       |   D
