--- a/README.adoc
+++ b/README.adoc
@@ -7,12 +7,6 @@
 - Jimmy MAURIAC - Membre du meilleur groupe de la SAÉ 
 
 
-==== GANTT 
-link:Gestion%20de%20projet/gantt.pdf[Gantt v1 prévu]
-
-==== Cahier de charges
-link:Gestion%20de%20projet/Cahier-Des-Charges-V1.adoc[Cahier des charges v1]
-
 ==== Répartition des tâches et état d'avancement
 [options="header,footer"]
 |=======================
@@ -52,10 +46,10 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 |===
 | Date    | Nom         |  Lien     | Retour
 | Sem.19  | CDC V1      |       link:Gestion%20de%20projet/Cahier-Des-Charges-V1.adoc[lien]    | D  Manque les liens vers les livrables !! Attention !! Du coup pas de retours possibles.
-|         |Gantt V1 Prévu|     link:Gestion%20de%20projet/gantt-V1.pdf[lien]     | D
-| 16/05   | CdC V2final|            |  
-|         | Gantt V1 Réalisé |      |     
-|         | Gantt V2 Prevu|         |     
+|         |Gantt V1 Prévu|     link:Gestion%20de%20projet/gantt-V1.pdf[lien]     | d
+| 16/05   | CdC V2final|    link:Gestion%20de%20projet/CahierDesCharges-V2.adoc[lien]        |  
+|         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |     
+|         | Gantt V2 Prevu|   link:Gestion%20de%20projet/GANTT-V2.pdf[lien]     |     
 |         | Doc. Tec. V1 |          |    
 |         | Doc User V1 |           |
 |         | Recette V1  |           | 
