--- a/Gestion de projet/CahierDesCharges-V2.adoc
+++ b/Gestion de projet/CahierDesCharges-V2.adoc
@@ -1,19 +1,19 @@
-##################################################################################
+################################################################################
 
-Cahier des charges +
+= Cahier des charges +
 Equipe : 1B2 (Berdinel - Soldevilla - Mauriac - Balasch) +
 Version : 2.0 +
 Date : 16/05/2023 +
 Projet : Daily Bank +
-##################################################################################
+################################################################################
 
-Sommaire : +
+== Sommaire : +
  1 - Sujet +
  2 - Analyse de la v1 +
  3 - Besoins de l'application +
  4 - Contraintes techniques et organisationnelles +
   
-1 - Sujet
+=== 1 - Sujet
 
   Contexte :
    La banque DailyBank souhaite développer une application de gestion des comptes clients en utilisant JAVA-Oracle pour remplacer plusieurs outils obsolètes.
@@ -25,16 +25,16 @@ Sommaire : +
     Ajouter les nouvelles fonctionnalités nécessaires à la v1 afin de permettre à l'application d'être complète et en capacité d'être mise en service.
     L'objectif est donc de concrétiser l'application et de pouvoir présenter à la banque un projet complet dans les temps.
 
-2 - Analyse de la V1
+=== 2 - Analyse de la V1
 
-  Dans la v1, un chef d’agence peut :
+    Dans la v1, un chef d’agence peut :
     Rendre inactif un client
     Créer un profil pour les nouveaux employés
     Accéder aux profils des employés
     Modifier le profil des employés 
     Supprimer un employé 
   
-  et un guichetier peut :
+    Un guichetier peut :
     Créer un nouveau client
     Consulter un compte
     Modifier les informations d'un client (adresse, téléphone, ...)
@@ -44,7 +44,7 @@ Sommaire : +
     Effectuer un virement 
     Créer un compte bancaire
 
-3 - Besoins de la v2 de l'application
+=== 3 - Besoins de la v2 de l'application
 
   Dans la v2 de l'application, un guichetier devra être en capacité de :
    Générer un relevé mensuel d'un compte en PDF
@@ -55,7 +55,7 @@ Sommaire : +
     Simuler un emprunt
     Simuler une assurance d'emprunt
   
-4 - Contraintes techniques & organisationnelles
+=== 4 - Contraintes techniques & organisationnelles
 
   L'équipe doit faire attention à respecter ces contraintes afin de livrer un projet conforme à l'objectif :
     - Définir un même outil de travail pour toute l'équipe afin de faciliter les échanges et la structuration du code
