--- a/README.adoc
+++ b/README.adoc
@@ -51,7 +51,7 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 |         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |     
 |         | Gantt V2 Prevu|   link:Gestion%20de%20projet/GANTT-V2.pdf[lien]     |     
 |         | Doc. Tec. V1 |          |    
-|         | Doc User V1 |           |
+|         | Doc User V1 |   link:Gestion%20de%20projet/Documentation-utilisateur.pdf[lien]        |
 |         | Recette V1  |           | 
 |         | Suivi projet V1|        | 
 | 26/05   | Gantt V2  réalisé|      | 
