--- a/Gestion de projet/Cahier-De-Recette-V1.adoc
+++ b/Gestion de projet/Cahier-De-Recette-V1.adoc
@@ -147,3 +147,36 @@ Les chefs d'agence ont accès aux mêmes fonctionnalités que les guichetiers, a
  *clôturés*.|
 
 |====
+
+==== 2.2 Creation d'un employé :
+
+|====
+
+>|Cas de test 4+|Test-02-01-02
+>|Titre 4+|Créer un employé
+>|Objectif 4+| Vérifier qu'il est possible de créer un compte employé
+
+5+|
+
+^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
+^|C_G_C.1    ^|Cliquer sur "Nouveau employé" dans Gestion > Employés. ^|Une nouvelle fenêtre de création s'ouvre.  ^| ... ^| OK
+^|C_G_C.2    ^|Remplir les champs avec des valeurs, appuyer "Ajouter". ^|La fenêtre de création se ferme, l'employé est créé.  ^| Les valeurs sont valides. ^| OK
+5+|
+
+|====
+
+==== 2.3 Visualisation d'employés :
+
+|====
+
+>|Cas de test 4+|Test-02-01-03
+>|Titre 4+|Visualiser les employés
+>|Objectif 4+| Vérifier qu'il est possible de créer visualiser les employés de son agence.
+5+|
+
+^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
+^|C_G_R.1    ^|Cliquer sur Gestion, onglet Employés. ^|Une nouvelle fenêtre s'ouvre. ^| ... ^| OK
+^|C_G_R.2    ^|Cliquer sur "Rechercher", appliquant les filtres (optionnel). ^|La liste d'employés s'affiche dans la nouvelle fenêtre.  ^| Les filtres sont bons, il existe des employés. ^| OK
+5+|
+
+|====
