--- a/README.adoc
+++ b/README.adoc
@@ -50,7 +50,7 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 | 16/05   | CdC V2final|    link:Gestion%20de%20projet/CahierDesCharges-V2.adoc[lien]        |  
 |         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |     
 |         | Gantt V2 Prevu|   link:Gestion%20de%20projet/GANTT-V2.pdf[lien]     |     
-|         | Doc. Tec. V1 |          |    
+|         | Doc. Tec. V1 |    link:Gestion%20de%20projet/Documentation-technique-V1.pdf[lien]      |    
 |         | Doc User V1 |   link:Gestion%20de%20projet/Documentation-utilisateur.pdf[lien]        |
 |         | Recette V1  |      link:Gestion%20de%20projet/Cahier-De-Recette-V1.adoc[lien]    | 
 |         | Suivi projet V1|        | 
