--- a/README.adoc
+++ b/README.adoc
@@ -48,12 +48,12 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 | Sem.19  | CDC V1      |       link:Gestion%20de%20projet/Cahier-Des-Charges-V1.adoc[lien]    | D  Manque les liens vers les livrables !! Attention !! Du coup pas de retours possibles.
 |         |Gantt V1 Prévu|     link:Gestion%20de%20projet/gantt-V1.pdf[lien]     | d
 | 16/05   | CdC V2final|    link:Gestion%20de%20projet/CahierDesCharges-V2.adoc[lien]        |  Manque sommaire interactif. Contexte trop succint et pas de problématique  !! Je n'ai pas de présentation de l'existant ! Je n'ai pas de fonctions commentées, elles ne sont pas priorisées, je n'ai pas les UC, je n'ai pas les règles de gestion ! Je n'ai que des contraintes orga , rien sur les contraintes techniques, les livrables attendus... bref une copie du sujet qui n'est pas le travail demandé. note 07/20
-|         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |     
+|         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |    il manque les jalons dans vos Gantt  les tâches ne sont pas effectées !
 |         | Gantt V2 Prevu|   link:Gestion%20de%20projet/GANTT-V2.pdf[lien]     |     
 |         | Doc. Tec. V1 |    link:Gestion%20de%20projet/Documentation-technique-V1.pdf[lien]      |    
-|         | Doc User V1 |   link:Gestion%20de%20projet/Documentation-utilisateur.pdf[lien]        |
+|         | Doc User V1 |   link:Gestion%20de%20projet/Documentation-utilisateur.pdf[lien]        | Attention toutes les docs sont demandées en aciidoc. Présenter les utilisateurs et classer les fonctions par utilisateur. Comment je peux vérifier que mon employé a bien été modifié ? 
 |         | Recette V1  |      link:Gestion%20de%20projet/Cahier-De-Recette-V1.adoc[lien]    | 
-|         | Suivi projet V1|        | 
+|         | Suivi projet V1|        | Les noms de projets sont peu équivoques planification V2 serait mieux. Ne pas oublier les task list dans les issues.
 | 26/05   | Gantt V2  réalisé|      | 
 |         | Doc. Util. V2 |         |         
 |         | Doc. Tec. V2 |          |     
