--- a/README.adoc
+++ b/README.adoc
@@ -50,7 +50,7 @@ Dans sa colonne il doit remplir la ligne correspondant à chaque partie qu'il a 
 | 16/05   | CdC V2final|    link:Gestion%20de%20projet/CahierDesCharges-V2.adoc[lien]        |  Manque sommaire interactif. Contexte trop succint et pas de problématique  !! Je n'ai pas de présentation de l'existant ! Je n'ai pas de fonctions commentées, elles ne sont pas priorisées, je n'ai pas les UC, je n'ai pas les règles de gestion ! Je n'ai que des contraintes orga , rien sur les contraintes techniques, les livrables attendus... bref une copie du sujet qui n'est pas le travail demandé. note 07/20
 |         | Gantt V1 Réalisé |  link:Gestion%20de%20projet/GANTT-V1-REALISE.pdf[lien]    |    il manque les jalons dans vos Gantt  les tâches ne sont pas effectées !
 |         | Gantt V2 Prevu|   link:Gestion%20de%20projet/GANTT-V2.pdf[lien]     |     
-|         | Doc. Tec. V1 |    link:Gestion%20de%20projet/Documentation-technique-V1.pdf[lien]      |    
+|         | Doc. Tec. V1 |    link:Gestion%20de%20projet/Documentation-technique-V1.pdf[lien]      | https://github.com/IUT-Blagnac/sae2023-bank-1b02/blob/main/retour%20doc%20technique%20v1.odt[retour doc technique]   
 |         | Doc User V1 |   link:Gestion%20de%20projet/Documentation-utilisateur.pdf[lien]        | Attention toutes les docs sont demandées en aciidoc. Présenter les utilisateurs et classer les fonctions par utilisateur. Comment je peux vérifier que mon employé a bien été modifié ? 
 |         | Recette V1  |      link:Gestion%20de%20projet/Cahier-De-Recette-V1.adoc[lien]    | 
 |         | javadoc v1 |       |
