--- a/Gestion de projet/Cahier-De-Recette-V1.adoc
+++ b/Gestion de projet/Cahier-De-Recette-V1.adoc
@@ -50,12 +50,11 @@ Ordinateur sous Windows ou OS équivalent.
 ^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
 ^|All_G_C.1 ^|Cliquer sur le bouton "Nouveau client". ^|La fenêtre de création des clients s'ouvre. ^| aucune ^|OK
 ^|All_G_C.2 ^|Compléter les champs spécifiés et valider. ^|Un nouveau client est créé. ^|aucune ^|OK
+^|All_G_C.3 ^|Compléter les champs spécifiés et annuler. ^|Aucun client n'est créé. ^|aucune ^|OK
 
 
 5+|
 
-5+|Commentaire :
-Compléter et si on ne valide pas, ...
 |====
 
 
@@ -71,6 +70,7 @@ Compléter et si on ne valide pas, ...
 ^|All_G_C.3 ^|Cliquer sur le bouton "Modifier client". ^|La fenêtre de modification des données du clients s'ouvre. ^|Le client est sélectionné ^|OK
 ^|All_G_C.4 ^|Modifier les champs souhaités et confirmer. ^|Retour sur les informations du client. Le client est modifié. ^|La fenêtre modifier client est active ^|OK
 ^|All_G_C.5 ^|Modifier les champs souhaités et annuler. ^|Retour sur les informations du client. Le client est inchangé. ^|La fenêtre modifier client est active ^|OK
+
 
 |====
 
@@ -89,6 +89,19 @@ Compléter et si on ne valide pas, ...
 ^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
 ^|All_G_CB.1 ^|Cliquer sur le bouton "Comptes client". ^|La page des comptes du client s’affiche. ^|Un client actif est sélectionné ^|OK
 ^|All_G_CB.2 ^|Sélectionner le bouton "Voir opérations". ^|La page des opérations du compte s’affiche. ^|Un compte actif est sélectionné ^|OK
+...
+|====
+|====
+>|Cas de test 4+|Test-01-02-03
+>|Titre 4+|Création d'un compte
+>|Objectif 4+| Vérifier qu'il est possible de créer un compte
+
+5+|
+
+^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
+^|All_G_CB.1 ^|Cliquer sur le bouton "Nouveau compte". ^|La page de création de compte s’affiche. ^|La gestion des comptes d'un client est ouverte ^|OK
+^|All_G_CB.2 ^|Modifier les champs souhaités et confirmer . ^|La page des comptes du client s’affiche avec le compte crée. ^|Les données sont valides ^|OK
+^|All_G_CB.2 ^|Modifier les champs souhaités et annuler . ^|La page des comptes du client s’affiche sans un nouveau compte. ^|La fenêtre gestion d'un compte est ouverte ^|OK
 ...
 
 |====
@@ -115,7 +128,18 @@ autorisé est de -100 euros.
 autorisé est de -100 euros.
  ^|OK
   
+ 5+|
  
+>|Cas de test 4+|Test-01-03-02
+>|Titre 4+|Créditer un compte
+>|Objectif 4+| Vérifier qu'il est possible de créditer un compte
+
+5+|
+
+^|ID ^|Action ^|Comportement attendu ^|Pré-conditions ^|Résultat
+^|All_G_COP.1 ^|Cliquer sur le bouton "Enregistrer crédit". ^|La page des crédits du compte s’affiche. ^| Un compte actif est sélectionné ^|OK
+^|All_G_COP.2  ^|Rentrer un montant 50 dans le champ "Montant". ^|Le nouveau solde est +50euros. On a créé une nouvelle opération dans la liste des opérations avec le bon montant et la bonne date ^| Le compte sélectionné n'est pas cloturé 
+ ^|OK 
 
 |====
 
