Finished prélèvement automatique

--- a/README.adoc
+++ b/README.adoc
@@ -24,10 +24,10 @@
 |2      |Chef d’Agence  | Emprunt | Simuler assurance          |       |        |   D   |
 |2      |Guichetier     | Compte | Relevé PDF                  |       |        |       |   D
 |2      |Guichetier     | CRUD Prélèvement | C                 |       |    D   |       |
-|2      |Guichetier     | CRUD Prélèvement | R                 |   D   |        |       |
+|2      |Guichetier     | CRUD Prélèvement | R                 |   F   |        |       |
 |2      |Guichetier     | CRUD Prélèvement | U                 |       |        |       |   D
 |2      |Guichetier     | CRUD Prélèvement | D                 |       |        |       |
-|2      |Batch          | Prélèvements automatiques |          |   D   |        |       |
+|2      |Batch          | Prélèvements automatiques |          |   F   |        |       |
 |2      |Batch          | Reléves mensuels |                   |   D   |        |       |
 
 |=======================
