--- a/README.adoc
+++ b/README.adoc
@@ -22,17 +22,12 @@
 |2      |Chef d’Agence  | Compte | Débit exceptionnel          |       |    F   |       |
 |2      |Chef d’Agence  | Emprunt | Simuler emprunt            |       |        |   D   |
 |2      |Chef d’Agence  | Emprunt | Simuler assurance          |       |        |   D   |
-|2      |Guichetier     | Compte | Relevé PDF                  |       |        |       |   D
-|2      |Guichetier     | CRUD Prélèvement | C                 |       |    D   |       |
-|2      |Guichetier     | CRUD Prélèvement | R                 |   F   |        |       |
-|2      |Guichetier     | CRUD Prélèvement | U                 |       |        |       |   D
-|2      |Guichetier     | CRUD Prélèvement | D                 |       |        |       |
-|2      |Batch          | Prélèvements automatiques |          |   F   |        |       |
+|2      |Guichetier     | Compte | Relevé PDF                  |       |        |       |   F
 |2      |Guichetier     | CRUD Prélèvement | C                 |       |    F   |       |
 |2      |Guichetier     | CRUD Prélèvement | R                 |   F   |        |       |
-|2      |Guichetier     | CRUD Prélèvement | U                 |       |        |       |   D
+|2      |Guichetier     | CRUD Prélèvement | U                 |       |        |       |   F
 |2      |Guichetier     | CRUD Prélèvement | D                 |       |    F   |       |
-|2      |Batch          | Prélèvements automatiques |          |   D   |        |       |
+|2      |Batch          | Prélèvements automatiques |          |   F   |        |       |
 |2      |Batch          | Reléves mensuels |                   |   D   |        |       |
 
 |=======================
